--- a/config.json
+++ b/config.json
@@ -46,12 +46,12 @@
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": "ᴋᴀᴋᴀsʜɪ 🖤",
-  "prefix": ".",
+  "prefix": "/",
   "BaYjidnapi": "61574905105668",
   "api": "",
   "api2": "",
   "api3": "",
-  "authorName": "BaYjid🤡",
+  "authorName": "Nirob",
   "facebook2": "https://www.facebook.com/BAYJID.404",
   "facebook": "https://www.facebook.com/BAYJID.404",
   "email": "mohammadbayjid204@yahoo.com",
